committed all updates on June 07

--- a/Day 12 - June 6/Day 12 - June 06 - 2.ipynb
+++ b/Day 12 - June 6/Day 12 - June 06 - 2.ipynb
@@ -1183,6 +1183,39 @@
     "warnings.simplefilter('ignore')\n",
     "scale_purchase"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.08347268,  0.68841558,  0.56314916, -1.        ],\n",
+       "       [ 1.32424438, -0.5315614 , -1.35395437,  1.        ],\n",
+       "       [ 0.12038585, -1.75153838, -0.87467848, -1.        ],\n",
+       "       [ 1.32424438, -0.35727897, -0.31552329, -1.        ],\n",
+       "       [ 0.12038585, -0.00871412, -0.43534226,  1.        ],\n",
+       "       [-1.08347268, -0.88012625, -0.55516123,  1.        ],\n",
+       "       [ 1.32424438,  0.25270952, -1.03443711, -1.        ],\n",
+       "       [-1.08347268,  1.38554529,  1.12230436,  1.        ],\n",
+       "       [ 0.12038585,  1.73411014,  1.44182161, -1.        ],\n",
+       "       [-1.08347268, -0.5315614 ,  1.44182161,  1.        ]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "stand_scaler = StandardScaler()\n",
+    "sample = stand_scaler.fit_transform(purchase)\n",
+    "sample"
+   ]
   }
  ],
  "metadata": {
